--- a/css/CastVideos.css
+++ b/css/CastVideos.css
@@ -1,3 +1,7 @@
+html {
+  --progress-bar-width: 700px;
+}
+
 body {
   background-color: #F2F2F2;
   font-family: 'Roboto', "OpenSans", "Verdana", Georgia, Serif;
@@ -11,7 +15,6 @@ body {
   display: none;
   transition: opacity 0 2s;
   -webkit-transition: opacity 0 2s;
-  /* Safari */
 }
 
 #top_header_bar {
@@ -106,7 +109,7 @@ body {
   margin-top: 20px;
   margin-bottom: 0px;
   width: 960px;
-  height: 536px;
+  height: 520px;
 }
 
 #video_image_overlay {
@@ -121,7 +124,6 @@ body {
     rgba(0, 0, 0, 0) 72%,
     rgba(0, 0, 0, 0) 100%);
   z-index: 0;
-  position: absolute;
   display: none;
 }
 
@@ -142,7 +144,7 @@ body {
   float: left;
   width: 940px;
   height: 116px;
-  margin: -4px 0px 0px 40px;
+  margin: 5px 0px 0px 40px;
   padding: 10px;
   opacity: 0.9;
   background-color: #DDE0E5;
@@ -160,24 +162,30 @@ body {
 
 #media_subtitle {
   float: left;
+  width: 80%;
+  margin: 10px;
+  font-size: 12px;
+  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
+}
+
+#feature_toggle_container {
+  clear: left;
+  float: left;
+  margin: 10px;
+  font-size: 12px;
+  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
+}
+
+radio {
+  float: left;
   margin: 13px 0px 0px 30px;
   padding: 0px;
   font-size: 18px;
   font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
 }
 
-#media_desc {
-  float: left;
-  width: 95%;
-  margin: 5px;
-  font-size: 12px;
-  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
-}
-
 #media_control {
-  position: absolute;
-  left: 8px;
-  top: 650px;
+  position: relative;
   width: 960px;
   height: 60px;
   z-index: 1000;
@@ -187,8 +195,7 @@ body {
   background-color: #000;
   font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
   transition: opacity 1s;
-  -webkit-transition: opacity 1s;
-  /* Safari */
+  -webkit-transition:opacity 1s; /* Safari */
 }
 
 #media_control:hover {
@@ -196,7 +203,7 @@ body {
 }
 
 #play {
-  margin: 10px 20px 10px 10px;
+  margin: 10px 0px 10px 10px;
   float: left;
   width: 65px;
   height: 40px;
@@ -213,7 +220,7 @@ body {
 
 #pause {
   display: none;
-  margin: 10px 20px 10px 10px;
+  margin: 10px 0px 10px 10px;
   float: left;
   width: 65px;
   height: 40px;
@@ -250,38 +257,81 @@ body {
   width: 25px;
 }
 
+#progress_bar_container {
+  position: relative;
+  height: 10px;
+  width: var(--progress-bar-width);
+  float: left;
+  margin: 12px 0px 0px 0px;
+}
+
+#progress_bg {
+  cursor: default;
+  float: left;
+  width: var(--progress-bar-width);
+  height: 10px;
+  background-repeat: repeat-x;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+#seekable_window {
+  position: absolute;
+  cursor: pointer;
+  z-index: 2;
+  float: left;
+  width: var(--progress-bar-width);
+  height: 10px;
+  background-repeat: repeat-x;
+  background-color: white;
+}
+
 #progress {
-  margin: 20px 0px 10px -620px;
   cursor: pointer;
   float: left;
   width: 1px;
-  height: 36px;
-  z-index: 10;
-  background-image: url('../imagefiles/timeline_bg_progress.png');
+  height: 10px;
+  z-index: 3;
   background-repeat: repeat-x;
+  position: absolute;
+  background-color: rgba(208, 2, 27, 1.0);
+  padding-left: -2px;
 }
+
+.adMarker {
+  position: absolute;
+  width: 5px;
+  height: 10px;
+  pointer-events: none;
+  background-color: gold;
+}
+
+#unseekable_overlay {
+  position: absolute;
+  cursor: default;
+  float: left;
+  width: 0px;
+  height: 10px;
+  z-index: 4;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 #progress_indicator {
   cursor: pointer;
-  margin: 20px 0px 10px -620px;
   float: left;
   draggable: true;
   width: 6px;
-  height: 36px;
-  z-index: 1000;
-  background-image: url('../imagefiles/timeline_indicator.png');
-  background-repeat: repeat-x;
+  height: 14px;
+  z-index: 5;
+  margin-top: -2px;
+  position: absolute;
+  background-color: rgba(208, 2, 27, 1.0);
 }
 
-#progress_bg {
-  margin: 20px 20px 10px 0px;
-  cursor: pointer;
-  float: left;
-  width: 600px;
-  height: 36px;
-  background-image: url('../imagefiles/timeline_bg_track.png');
-  background-repeat: repeat-x;
+#progress_indicator:hover {
+  margin-top: -3px;
+  height: 16px;
 }
 
 #castbutton {
@@ -301,8 +351,8 @@ body {
 }
 
 #audio_off {
-  float: right;
-  margin:10px 4px 10px 0px;
+  float: left;
+  margin: 10px 15px 10px 15px;
   width: 32px;
   height: 32px;
   display: none;
@@ -310,20 +360,20 @@ body {
 }
 
 #audio_on {
-  float: right;
+  float: left;
   width: 32px;
   height: 32px;
-  margin: 10px 4px 10px 0px;
+  margin: 10px 15px 10px 15px;
   display: block;
   background-image: url('../imagefiles/audio_on.png');
 }
 
 #audio_bg {
-  float: right;
+  float: left;
   opacity: 0.1;
   width: 41px;
   height: 124px;
-  margin: -115px 8px -10px 0px;
+  margin: -115px 0px -10px 8px;
   display: block;
   background-image: url('../imagefiles/audio_bg.png');
   position: relative;
@@ -331,11 +381,11 @@ body {
 }
 
 #audio_bg_track {
-  float: right;
+  float: left;
   opacity: 0.0;
   width: 16px;
   height: 100px;
-  margin: -100px 20px -30px 0px;
+  margin: -100px 0px -30px 20px;
   display: block;
   background-image: url('../imagefiles/audio_bg_track.png');
   position: relative;
@@ -343,11 +393,11 @@ body {
 }
 
 #audio_indicator {
-  float: right;
+  float: left;
   opacity: 0.0;
   width: 16px;
   height: 5px;
-  margin:-50px 20px -30px 0px;
+  margin: -50px 0px -30px 20px;
   display: none;
   background-image: url('../imagefiles/audio_indicator.png');
   position: relative;
@@ -355,11 +405,11 @@ body {
 }
 
 #audio_bg_level {
-  float: right;
+  float: left;
   opacity: 0.0;
   width: 16px;
   height: 50px;
-  margin: -50px 20px -30px 0px;
+  margin: -50px 0px -30px 20px;
   display: block;
   background-image: url('../imagefiles/audio_bg_level.png');
   position: relative;
@@ -367,7 +417,7 @@ body {
 }
 
 #fullscreen_expand {
-  float:right;
+  float: right;
   width: 32px;
   height: 32px;
   margin: 10px 20px 10px 0px;
@@ -377,7 +427,7 @@ body {
 }
 
 #fullscreen_collapse {
-  float:right;
+  float: right;
   width: 32px;
   height: 32px;
   margin: 10px 20px 10px 0px;
@@ -386,17 +436,72 @@ body {
   cursor: pointer;
 }
 
-#duration {
-  float:right;
+#currentTime {
+  position: absolute;
+  left: 140px;
+  top: 22px;
   color: #fff;
-  width: 60px;
-  height: 32px;
-  margin: 18px 15px 10px 15px;
+  width: 92px;
+  height: 20px;
+  margin: 8px 0px 0px 0px;
   display: block;
 }
 
-div.imageSub { position: relative; }
-div.imageSub img { z-index: 1; }
+#duration {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  right: 125px;
+  top: 22px;
+  color: #fff;
+  width: 92px;
+  height: 20px;
+  margin: 8px 0px 0px 0px;
+}
+
+#live_indicator {
+  position: absolute;
+  right: 190px;
+  top: 22px;
+  height: 20px;
+  margin: 8px 30px 0px 0px;
+  display: none;
+}
+
+#skip {
+  background-image: url('../imagefiles/skip.png');
+  color: white;
+  cursor: pointer;
+  display: none;
+  opacity: 0.7;
+  left: 875px;
+  top: 575px;
+  width: 55px;
+  height: 19px;
+  font-family: 'Roboto', "Open Sans", "Verdana", Georgia, Serif;
+  margin: -60px 0px 0px 40px;
+  padding: 10px;
+  position: absolute;
+  z-index: 1000;
+}
+
+#skip:hover {
+  background-image: url('../imagefiles/skip_hover.png');
+}
+
+#skip:press {
+  background-image: url('../imagefiles/skip_press.png');
+}
+
+div.imageSub {
+  position: relative;
+  height: 540px;
+}
+
+div.imageSub img {
+  z-index: 1;
+}
+
 div.imageSub div {
   position: absolute;
   left: 0%;
@@ -407,7 +512,7 @@ div.imageSub div {
 
 div.imageSub div.blackbg {
   z-index: 2000;
-  bottom: 60px;
+  bottom: 75px;
   left: 300px;
   width: 400px;
   height: 30px;
@@ -423,7 +528,7 @@ div.imageSub div.blackbg {
 
 div.imageSub div.label {
   z-index: 3000;
-  bottom: 60px;
+  bottom: 80px;
   left: 300px;
   width: 400px;
   height: 30px;
@@ -431,6 +536,7 @@ div.imageSub div.label {
   font-size: 120%;
   display: none;
   padding: 10px;
+  text-align: center;
 }
 
 #carousel {
